--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -31,8 +31,8 @@
     
         <div id="aside_after" >
             <ul>
-                <li><textarea placeholder="texto de salida"> </textarea></li>
-                <li><input type="button" class="botonCopiar"value="Copiar" ></li>
+                <li><textarea placeholder="texto de salida" id="textarea_salida" > </textarea></li>
+                <li><input type="button" class="botonCopiar" value="Copiar" ></li>
             </ul>
         </div>
     </div>
