caja de texto Aside after Estilizada - version de presentacion

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class= navegadorTop>
-        <img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Alura_logo.png" alt="Logo de Alura" >
+        <img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Alura_logo.png" alt="Logo de Alura" class="logoNav">
     </div>
 
     <div class = "contenido">
 
         <textarea placeholder="Ingrese su Texto aqui" id="cajaEntradaUsuario"></textarea>
-        <p>"Logo Solo letras minisculas y sin acentos" </p>
+        <p><img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Advertencia_logo.png" alt="LogoAdvertencia"> "Solo letras minisculas y sin acentos" </p>
         <input type="button" class = "botonOscuro" value="Encriptar">
         <input type="button" class = "botonClaro" value="Desencriptar">
     </div>
@@ -25,7 +25,8 @@
         <div id="aside_before">
             <ul>
                 <li><img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Muñeco.png" alt="Muñeco" class = "Muñeco"></li>
-                <li><p><strong>Ningún mensaje fue encontrado</strong><br>ingresa el texto que desees encriptar o desencriptar.</p></li>
+                <li><p class="parrafo_aside"><strong>Ningún mensaje fue encontrado</strong></p>
+                    
             </ul>
         </div>
     
