añadidos interacciones botones al dar click, Titulo en navegadorTop

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -8,8 +8,9 @@
     <title>Encriptador</title>
 </head>
 <body>
-    <div class= navegadorTop>
-        <img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Alura_logo.png" alt="Logo de Alura" class="logoNav">
+    <div class="navegadorTop">
+        <h1><strong>Proyecto Encriptador</strong></h1>
+        <!--<img src="C:\Users\Usuario\Documents\Oracle_next_education\Encriptador\assets\Alura_logo.png" alt="Logo de Alura" class="logoNav">-->
     </div>
 
     <div class = "contenido">
